tests/ui/consts/miri_unleashed/raw_mutable_const.stderr
error: unsupported untyped pointer in constant
  --> $DIR/raw_mutable_const.rs:5:1
   |
LL | const MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: memory only reachable via raw pointers is not supported

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/raw_mutable_const.rs:5:38
   |
LL | const MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   |                                      ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

